--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Text::Clevy
 
+0.0001_02 Mon Jul 26 17:49:35 2010
+    - Catch up to Xslate 0.1048
+    - Fix timezone problems in tests
+
 0.0001_01 Mon Jul 19 17:10:16 2010
     - First development release!
 
