--- a/README
+++ b/README
@@ -1,5 +1,26 @@
 This is Perl module Text::Clevy.
 
+SYNOPSIS
+
+    use Text::Clevy;
+
+    my $tc = Text::Clevy->new();
+
+    my %vars = (
+        lang => 'Smarty',
+    );
+
+    # pass a PSGI request
+    my $psgi_env = {};
+    print $tc->render_string('Hello, {$lang} world!',
+        \%vars, env => $psgi_env);
+
+    # or pass a request object
+    my $request = Plack::Request->new($psgi_env);
+    print $tc->render_string('Hello, {$lang} world',
+        \%vars, request => $request);
+
+
 INSTALLATION
 
 Text::Clevy installation is straightforward. If your CPAN shell is set up,
